@@ -4,7 +4,8 @@ Grok changes
 1.0b1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Import zope.app.container interfaces from their actual definition not from a
+  re-import.
 
 
 1.0a3 (2009-04-10)
